# proposal-to-qwilr

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
api/: app.py
api/routes/: proposals.py  webhooks.py
cli/: main.py
n8n/: qwilr-publisher.json
proposal_qwilr/: __init__.py  client.py  database.py  html_renderer.py  mapper.py  schemas.py
scripts/: migrate_supabase.py  setup_qwilr_template.py
tests/: conftest.py  test_client.py  test_html_renderer.py  test_mapper.py  test_schemas.py
tests/fixtures/: sample_proposal.json
