[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proposal-to-qwilr"
version = "0.1.0"
description = "Convert structured proposals to interactive Qwilr pages"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
proposal-to-qwilr = "cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["proposal_qwilr", "cli", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: tests that call real Qwilr API (deselect by default)"
]

[tool.ruff]
line-length = 100
target-version = "py311"
